[gd_scene load_steps=2 format=3 uid="uid://ydpn8bn8amx1"]

[ext_resource type="Script" uid="uid://ci5l5m1e87i61" path="res://WinnerScene.gd" id="1_sotk5"]

[node name="WinnerScene" type="CanvasLayer"]
script = ExtResource("1_sotk5")

[node name="GlavniUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GlavniUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.38431373, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GlavniUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -23.5
offset_right = 4.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="LabelWinner" type="Label" parent="GlavniUI/VBoxContainer"]
layout_mode = 2

[node name="BtnRestart" type="Button" parent="GlavniUI/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="BtnMenu" type="Button" parent="GlavniUI/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="BtnQuit" type="Button" parent="GlavniUI/VBoxContainer"]
layout_mode = 2
text = "Quit
"
